--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,8 +32,19 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'parser:index' %}">Главная</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'parser:create-options' %}">Новый поиск</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'parser:results' %}">Результаты</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'parser:results' %}">Результаты</a></li>
+                    {% endif %}
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'parser:contacts' %}">Контакты</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:logout' %}">Выход</a></li>
+                    <li><p></p></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger">Пользователь</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger">{{user.username}}</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:login' %}">Вход</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:register' %}">Регистрация</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
