--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,7 +40,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:logout' %}">Выход</a></li>
                     <li><p></p></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger">Пользователь</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger">{{user.username}}</a></li>
+                    <li class="nav-item"><a href="{% url 'user:profile' pk=user.pk %}" class="nav-link js-scroll-trigger">{{user.username}}</a></li>
                     {% else %}
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:login' %}">Вход</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'user:register' %}">Регистрация</a></li>
@@ -57,5 +57,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/my.js' %}"></script>
+
 </body>
 </html>
